@@ -12,7 +12,11 @@ subprojects {
     group = 'com.alertify'
     version = '0.0.1-SNAPSHOT'
 
-    sourceCompatibility = '21'
+    java {
+        toolchain {
+            languageVersion = JavaLanguageVersion.of(21)
+        }
+    }
 
     repositories {
         mavenCentral()
@@ -32,5 +36,6 @@ subprojects {
 
     test {
         useJUnitPlatform()
+        jvmArgs '-XX:+EnableDynamicAgentLoading', '-Xshare:off'
     }
 }
